# factor-fund

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  pages.yml  quarto.yml
config/: public_settings.yaml
docs/: index.md  slides.html
docs/methodology/: overview.md
docs/methodology/stages/: stage01.md  stage02.md  stage03.md  stage04.md  stage05.md  stage06.md
docs/presentation/: README.md  index.html  slides.html  slides.qmd
notebooks/: 00_generate_factor_matrix_demo.ipynb  M1_generate_factor_matrix_demo.py  M2_model_training_demo.py  M3_portfolio_demo.py  M4_backtest_demo.py  README.md
scripts/: ci_checks.py  export_public_artifacts.py  make_figures.py  make_pipeline_flowchart.py
src/cli/: ff_cli.py
src/factor_fund/interfaces/: data_api.py  model_api.py
src/factor_fund/staging/: stage07_schema.py  stage08_schema.py  stage09_schema.py  stage10_schema.py  stage11_schema.py
src/factor_fund/viz/: charts.py
