[project]
name = "factor-fund"
version = "0.1.0"
description = "Public-safe interfaces & docs for Factor Fund showcase"
authors = [{name = "Celso Avila"}]
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "matplotlib",
  "plotly",
  "pydantic",
  "rich",
]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
select = ["E","F","I","UP"]
